--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,26 +1,24 @@
 @import "/node_modules/bootstrap/scss/bootstrap.scss";
+@import "/node_modules/bootstrap-icons/font/bootstrap-icons.css";
 
-body,html{
-    width: 100%;
-    height: 100%;
-    font-family: 'Montserrat', sans-serif;
-    background: url(/src/assets/img/background.jpg) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+body::before {
+  display: block;
+  content: "";
+  height: 60px;
 }
 
-.text-color{
-    color: rgb(255, 255, 255);
-    font-size: 3rem;
-    
+@media (min-width: 768px) {
+  .news-input {
+    width: 50%;
+  }
 }
-.bar {
-    margin: 20px auto;
-    color: #e12d0d;
-    border: 2px solid #e12d0d;
-    max-width: 65px;
-    opacity: 1;  
-    background-color: #e12d0d;
+
+#map {
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+}
+
+li:hover {
+  cursor: pointer;
 }
